drop-down menu trigger - title overlapping fixed

--- a/index_files/style.css
+++ b/index_files/style.css
@@ -619,7 +619,9 @@ a:active {
 	color: #000;
 	text-decoration: none;
 }
-
+.site-header a.title {
+	margin-right: 25px;
+}
 .banner-clip-mask {
 	position: relative;
 	z-index: 0;
